--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,25 @@ devenv.local.nix
 # direnv
 .direnv
 .devenv
+
+node_modules
+
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
